Initial mock method implementation.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,18 +5,19 @@
 cmake_minimum_required(VERSION 3.4)
 project(spookshow)
 
-set(CMAKE_CXX_FLAGS "-std=gnu++11 -Wall -Wpedantic")
-
-# -- Variables --
+# toolchain flags
+set(CMAKE_CXX_FLAGS 		"-std=gnu++11 -Wall -Wpedantic")
+set(CMAKE_CXX_DEBUG_FLAGS 	"-g")
+set(CMAKE_CXX_RELEASE_FLAGS	"-O2 -s -Werror")
 
 # working directories
-set(SRC_DIR ${CMAKE_SOURCE_DIR}/src)
-set(INCLUDE_DIR ${CMAKE_SOURCE_DIR}/include)
-set(EXAMPLES_DIR ${CMAKE_SOURCE_DIR}/examples)
+set(SRC_DIR 			${CMAKE_SOURCE_DIR}/src)
+set(INCLUDE_DIR 		${CMAKE_SOURCE_DIR}/include)
+set(EXAMPLES_DIR 		${CMAKE_SOURCE_DIR}/examples)
 
 # target names
-set(LIBRARY_NAME ${CMAKE_PROJECT_NAME})
-set(EXAMPLES_NAME ${CMAKE_PROJECT_NAME}_examples)
+set(LIBRARY_NAME 		${CMAKE_PROJECT_NAME})
+set(EXAMPLES_NAME 		examples)
 
 # -- Project Configuration --
 
@@ -34,3 +35,10 @@ add_library(${LIBRARY_NAME} STATIC
 add_executable(${EXAMPLES_NAME} EXCLUDE_FROM_ALL
   ${EXAMPLES_DIR}/main.cpp)
 target_link_libraries(${EXAMPLES_NAME} ${LIBRARY_NAME})
+
+# -- Exports --
+
+get_directory_property(HAS_PARENT PARENT_DIRECTORY)
+if(HAS_PARENT)
+  set(SPOOKSHOW_LIBRARY_NAME ${LIBRARY_NAME} PARENT_SCOPE)
+endif()
