--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,14 @@
-# Enable C++ support
 language: cpp
 
-# Compiler selection
 compiler:
   - gcc
 
-# Build steps
+before_install:
+  - sudo add-apt-repository -y ppa:ubuntu-toolchain-r/test
+  - sudo apt-get -qq update
+  - sudo apt-get -qq install g++-4.9
+  - sudo update-alternatives --install /usr/bin/g++ g++ /usr/bin/g++-4.9 90
+
 script:
   - mkdir build
   - cd build
