Run unit tests, and add icon for build status.

--- a/.travis.yml
+++ b/.travis.yml
@@ -20,7 +20,4 @@ before_install:
 script:
   - mkdir build
   - cd build
-  - cmake ..
-  - make
-  - make tests
-  - make examples
+  - cmake .. && make && make examples && make tests && ./tests
