--- a/.travis.yml
+++ b/.travis.yml
@@ -20,4 +20,4 @@ before_install:
 script:
   - mkdir build
   - cd build
-  - cmake .. && make && make examples && make tests && ./tests
+  - cmake .. && make && make examples && make tests
